# cpp_concurrency

./: .gitignore  CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/spmc_queue/: CMakeLists.txt  spmc_queue.cpp  spmc_queue.hpp
lib/spsc_queue/: CMakeLists.txt  spsc_queue.cpp  spsc_queue.hpp
lib/thread_pool/: CMakeLists.txt  thread_pool.cpp  thread_pool.hpp
pretty_mandelbrot_images/: 00_overview_result_iter.ppm  00_overview_result_smooth.ppm  01_elephant_valley_result_iter.ppm  01_elephant_valley_result_smooth.ppm  02_seahorse_valley_result_iter.ppm  02_seahorse_valley_result_smooth.ppm  03_triple_spiral_result_iter.ppm  03_triple_spiral_result_smooth.ppm  04_airplane_island_result_iter.ppm  04_airplane_island_result_smooth.ppm  05_dendrite_island_result_iter.ppm  05_dendrite_island_result_smooth.ppm  06_spiral_wheels_result_iter.ppm  06_spiral_wheels_result_smooth.ppm  07_wheels_within_wheels_result_iter.ppm  07_wheels_within_wheels_result_smooth.ppm  08_embedded_julia_result_iter.ppm  08_embedded_julia_result_smooth.ppm
results/: results.txt
scripts/: plot_benchmark_results.py
src/: CMakeLists.txt  exec_spsc_queue.cpp  exec_spsc_queue.hpp  main.cpp  mandelbrot_benchmark.hpp  mandelbrot_common.cpp  mandelbrot_common.hpp  mandelbrot_exec_calc.cpp  mandelbrot_exec_calc.hpp  mandelbrot_output.cpp  mandelbrot_output.hpp
test/: CMakeLists.txt  spmc_queue_test.cpp
